Revert "Fix carousel jump: all slides absolute, fixed slider size"
This reverts commit 2540d10a5bb2fb39d02c0af033cb50926105fa7a.

--- a/styles.css
+++ b/styles.css
@@ -1673,16 +1673,16 @@ body {
 
 .v4-tray-slider {
   position: relative;
-  width: 42vh;
   height: 42vh;
 }
 
 .v4-tray-img {
   display: block;
-  width: 42vh;
+  width: auto;
   height: 42vh;
+  max-width: 100%;
   object-fit: contain;
-  object-position: center;
+  object-position: left top;
 }
 
 .v4-slide {
@@ -1694,6 +1694,7 @@ body {
 
 .v4-slide.active {
   opacity: 1;
+  position: relative;
 }
 
 /* Floating stat badges */
